Fix main menu alignment

--- a/themes/landscape/source/css/_partial/header.styl
+++ b/themes/landscape/source/css/_partial/header.styl
@@ -113,6 +113,7 @@ $nav-link
     display: none
 
 #main-nav-toggle
+  margin-left: 15px;
   display: none
   &:before
     content: "\f0c9"
@@ -128,6 +129,7 @@ $nav-link
     content: "\f09e"
 
 #nav-search-btn
+  margin-right: 15px
   &:before
     content: "\f002"
 
